Lemon basic add functionality

--- a/app/assets/stylesheets/sffoodtrucks.scss
+++ b/app/assets/stylesheets/sffoodtrucks.scss
@@ -14,6 +14,12 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
+// Utility
+
+.hidden {
+  visibility: hidden;
+}
+
 // App Containers and header bars
 
 #root {
