--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>San Francisco Food Trucks</title>
-    <link rel="shortcut icon" href=<%=asset_path('truckplease.png')%> />
-    <link rel="image_src" href=<%=asset_path('truckplease.png')%> />
-    <link rel="icon" type="image/png" href=<%=asset_path('lesliesbrocco.png')%>>
+    <title>Robert's Lemon Party</title>
+    <link rel="shortcut icon" href=<%=asset_path('lemon_whole.png')%> />
+    <link rel="image_src" href=<%=asset_path('lemon_side.png')%> />
+    <link rel="icon" type="image/png" href=<%=asset_path('lemon_cross.png')%>>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{ENV['GOOGLE_MAPS_KEY']}" %>
