--- a/app/assets/stylesheets/sffoodtrucks.scss
+++ b/app/assets/stylesheets/sffoodtrucks.scss
@@ -230,7 +230,7 @@ select {
 .open-lemon-form {
   border: 1px solid black;
   position: absolute;
-  top: -100px;
+  top: -85px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -240,6 +240,29 @@ select {
   margin-top: 10px;
   border-radius: 5px;
   transition: .3s
+}
+
+.sheen {
+  position: absolute;
+  overflow: hidden;
+}
+
+.sheen:after {
+  animation: sheen 1s 0s infinite;
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(to bottom, transparent, rgba(255,255,255,0.5) 50%, transparent);
+  transform: rotateZ(60deg) translate(-1em, 4em);
+}
+
+@keyframes sheen {
+  100% {
+    transform: rotateZ(60deg) translate(0, -4em);
+  }
 }
 
 .open-lemon-form:hover {
