--- a/app/assets/stylesheets/sffoodtrucks.scss
+++ b/app/assets/stylesheets/sffoodtrucks.scss
@@ -10,9 +10,9 @@ $pale-white: rgba(160, 160, 160, .3);
 $extra-pale-white: rgba(255, 255, 255, .75);
 $purple-blue: rgba(16, 0, 76, .6);
 $yellow: rgba(247, 202, 24, 1);
-$pale-yellow: rgba(247, 202, 24, .5);
+$pale-yellow: rgba(247, 202, 24, .75);
 $light-yellow: rgba(244, 247, 118, 1);
-$pale-light-yellow: rgba(244, 247, 118, .5);
+$pale-light-yellow: rgba(244, 247, 118, .75);
 $gray: rgba(190, 190, 190, 1);
 $medium-heavy-gray: rgba(190, 190, 190, .75);
 $medium-gray: rgba(190, 190, 190, .5);
@@ -21,8 +21,8 @@ $lightest-gray: rgba(255, 255, 255, .05);
 $orange: rgba(255, 215, 142, 1);
 $lime: rgba(157, 251, 75, 1);
 $medium-orange: rgba(255, 215, 142, .9);
-$pale-orange: rgba(255, 215, 142, .5);
-$pale-lime: rgba(157, 251, 75, .5);
+$pale-orange: rgba(255, 215, 142, .75);
+$pale-lime: rgba(157, 251, 75, .75);
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
@@ -478,6 +478,7 @@ select {
 }
 
 textarea {
+  padding: 5px;
   height: 5rem;
   margin: 0 15px;
   font-size: 16px;
