--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>Robert's Lemon Party</title>
     <link rel="shortcut icon" href=<%=asset_path('lemon_whole.png')%> />
     <link rel="image_src" href=<%=asset_path('lemon_side.png')%> />
-    <link rel="icon" type="image/png" href=<%=asset_path('lemon_cross.png')%>>
+    <link rel="icon" type="image/png" href=<%=asset_path('lemon_side.png')%>>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <meta name="viewport" content="width=device-width">
