timeout and background text color

--- a/app/assets/stylesheets/sffoodtrucks.scss
+++ b/app/assets/stylesheets/sffoodtrucks.scss
@@ -589,7 +589,7 @@ textarea {
   background-color: $light-gray;
 
   @media screen and (min-width: 900px) {
-    background-color: $medium-gray;
+    background-color: $medium-heavy-gray;
   }
 }
 
