--- a/app/assets/stylesheets/sffoodtrucks.scss
+++ b/app/assets/stylesheets/sffoodtrucks.scss
@@ -89,7 +89,7 @@ select {
   flex-direction: column;
 
   @media screen and (min-width: 900px) {
-    flex-direction: row-reverse;    
+    flex-direction: row-reverse;
     width: 100%;
     height: auto;
   }
@@ -121,6 +121,7 @@ select {
   @media screen and (min-width: 900px) {
     width: 50%;
     height: 550px;
+    opacity: .97;
   }
 }
 
