--- a/app/assets/stylesheets/sffoodtrucks.scss
+++ b/app/assets/stylesheets/sffoodtrucks.scss
@@ -420,6 +420,12 @@ select {
   display: flex;
   align-items: center;
   width: 100%;
+
+  @media screen and (min-width: 900px) {
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 15px 0 15px 0;
+  }
 }
 
 #tree-container {
@@ -428,6 +434,21 @@ select {
   align-items: flex-start;
   flex: 1;
   margin: 15px;
+
+  @media screen and (min-width: 900px) {
+    margin: 0;
+    width: 100%;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    box-sizing: border-box;
+    flex: none;
+  }
+}
+
+#tree-select {
+  @media screen and (min-width: 900px) {
+    width: 100%;
+  }
 }
 
 #desc-label {
@@ -436,6 +457,14 @@ select {
   align-items: flex-start;
   margin: 15px;
   flex: 4;
+
+  @media screen and (min-width: 900px) {
+    margin: 15px 0 0 0;
+    width: 100%;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    box-sizing: border-box;
+  }
 }
 
 #desc-input {
