--- a/app/assets/stylesheets/sffoodtrucks.scss
+++ b/app/assets/stylesheets/sffoodtrucks.scss
@@ -245,12 +245,12 @@ select {
   display: flex;
   align-items: center;
   padding: 4px;
-  width: 15%;
+  width: 14%;
 }
 
 .lemon-location {
-  padding: 4px;
-  width: 55%;
+  padding: 4px 8px 4px 4px;
+  width: 53%;
   display: flex;
   align-items: center;
 }
@@ -259,7 +259,7 @@ select {
   display: flex;
   align-items: center;
   padding: 4px;
-  width: 30%;
+  width: 33%;
 }
 
 .lemon-actions {
