--- a/app/assets/stylesheets/sffoodtrucks.scss
+++ b/app/assets/stylesheets/sffoodtrucks.scss
@@ -747,7 +747,7 @@ textarea {
     display: block;
     width: 15px;
     height: 15px;
-    background-image: image-url("lemon_side.png");
+    background-image: image-url("lemon_whole.png");
     background-size: contain;
     position: fixed;
     bottom: 5px;
@@ -1137,4 +1137,20 @@ textarea {
     transition-duration: 1s;
     background-position: -2800px 0;
   }
+}
+
+
+
+#user-form {
+  position: fixed;
+  z-index: 100;
+  width: 100vw;
+  height: 100vh;
+}
+
+#user-name {
+}
+
+#user-name {
+
 }
