--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,1 +1,8 @@
+<script id="check-if-logged-in" type="text/javascript">
+  <% if logged_in? %>
+    window.currentUser = <%= render("api/users/user.json.jbuilder", user: current_user).html_safe %>
+  <% end %>
+  window.keyMatch = "<%= ENV['LEMON_PARTY_TOKEN'] %>"
+</script>
+
 <main id="root"></main>
